[gd_scene load_steps=3 format=2]

[ext_resource path="res://images/upgradescreen.png" type="Texture" id=1]
[ext_resource path="res://UpgradeScreen.gd" type="Script" id=2]

[node name="UpgradeScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 537, 353 )
scale = Vector2( 0.619531, 0.656944 )
texture = ExtResource( 1 )

[node name="VerticalContainer" type="VBoxContainer" parent="."]
margin_left = 82.0
margin_top = 555.0
margin_right = 729.0
margin_bottom = 644.0

[node name="UpgradeButtons" type="HBoxContainer" parent="VerticalContainer"]
margin_right = 647.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="Speed" type="Button" parent="VerticalContainer/UpgradeButtons"]
margin_right = 114.0
margin_bottom = 20.0
text = "Increase Speed "

[node name="Acorn_Damage" type="Button" parent="VerticalContainer/UpgradeButtons"]
margin_left = 144.0
margin_right = 249.0
margin_bottom = 20.0
text = "Acorn Damage"

[node name="Health" type="Button" parent="VerticalContainer/UpgradeButtons"]
margin_left = 279.0
margin_right = 392.0
margin_bottom = 20.0
text = "Increase Health"

[node name="UpgradeDescriptions" type="HBoxContainer" parent="."]
margin_left = 165.0
margin_top = 422.0
margin_right = 576.0
margin_bottom = 508.0

[node name="SpeedLabel" type="RichTextLabel" parent="."]
margin_left = 94.0
margin_top = 288.0
margin_right = 184.0
margin_bottom = 535.0
text = "speed text
blah blah
blah 

/...."

[node name="StrengthLabel" type="RichTextLabel" parent="."]
margin_left = 222.0
margin_top = 291.0
margin_right = 356.0
margin_bottom = 488.0
text = "show me my text!"

[node name="HealthLabel" type="RichTextLabel" parent="."]
margin_left = 370.0
margin_top = 290.0
margin_right = 488.0
margin_bottom = 520.0
rect_min_size = Vector2( 30, 0 )
text = "health text where? "

[node name="ContinueButton" type="Button" parent="."]
margin_left = 922.0
margin_top = 131.0
margin_right = 1028.0
margin_bottom = 151.0
text = "Play Next Level"

[node name="QuitButton" type="Button" parent="."]
margin_left = 184.0
margin_top = 678.0
margin_right = 266.0
margin_bottom = 698.0
text = "Quit Game"

[node name="MainMenuButton" type="Button" parent="."]
margin_left = 96.0
margin_top = 678.0
margin_right = 178.0
margin_bottom = 698.0
text = "Main Menu"

[node name="Help" type="Button" parent="."]
margin_left = 12.0
margin_top = 677.0
margin_right = 90.0
margin_bottom = 697.0
text = "Help"

[connection signal="pressed" from="VerticalContainer/UpgradeButtons/Speed" to="." method="_on_Speed_pressed"]
[connection signal="pressed" from="VerticalContainer/UpgradeButtons/Acorn_Damage" to="." method="_on_Acorn_Damage_pressed"]
[connection signal="pressed" from="VerticalContainer/UpgradeButtons/Health" to="." method="_on_Health_pressed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Help" to="." method="_on_Help_pressed"]
